Add code that demonstrates Java / JavaScript PGP integration for exchanged messages

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -12,6 +12,7 @@
         <li><a href="generate-keys.html">Generate new "javascript" keys</a></li>
         <li><a href="encrypt-javascript-to-java.html">Encrypt a message from javascript to java</a></li>
         <li><a href="encrypt-java-to-javascript.html">Encrypt a message from java to javascript</a></li>
+        <li><a href="decrypt-java-to-javascript.html">Decrypt a message from java (encrypted on server) to javascript</a></li>
     </ul>
 
     <script>
